# mdup

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
mdup/: __init__.py  __main__.py  admonitions.py  assets.py  backends.py  cli.py  core.py  mathrender.py  mermaid.py  render.py
mdup/resources/: default.css
tests/: test_convert.py
tests/fixtures/: sample.md
